--- a/reactsushi/index.html
+++ b/reactsushi/index.html
@@ -81,7 +81,7 @@ http://blog.koba04.com/post/2015/01/13/a-combination-of-reactjs-and-6to5/
 
 class: center, middle
 
-## At the time, Marionette.js is ...
+## On the other hand, Marionette.js is ...
 
 ---
 
@@ -180,7 +180,7 @@ https://github.com/TimBeyer/html-to-vdom
 
 class: center, middle
 
-## At the time, ember.js is ...
+## On the other hand, ember.js is ...
 
 ---
 
