Add canonical, description and author

--- a/reactsushi/index.html
+++ b/reactsushi/index.html
@@ -3,7 +3,10 @@
 <html>
   <head>
     <title>#reactsushi</title>
-    <meta charset=utf-8" />
+    <meta charset="utf-8" />
+    <link rel="canonical" href="http://koba04.github.io/slides/reactsushi/" />
+    <meta name="description" content="#reactsushi">
+    <meta name="author" content="koba04">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
