--- a/reactsushi/index.html
+++ b/reactsushi/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>#reactsushi</title>
     <meta charset="utf-8" />
-    <link rel="canonical" href="http://koba04.github.io/slides/reactsushi/" />
+    <link rel="canonical" href="http://koba04.github.io/slides/reactsushi/#1" />
     <meta name="description" content="#reactsushi">
     <meta name="author" content="koba04">
     <style>
