Move x-sushiyuki to assets

--- a/reactsushi/index.html
+++ b/reactsushi/index.html
@@ -19,7 +19,7 @@
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.5.2/webcomponents.js"></script>
-    <link rel="import" href="x-sushiyuki/x-sushiyuki.html">
+    <link rel="import" href="/assets/webcomponents/x-sushiyuki/x-sushiyuki.html">
   </head>
   <body>
     <textarea id="source">
